force-app/main/default/objects/SAJ_Release_Component__c/SAJ_Release_Component__c.object-meta.xml
<CustomObject>
    <description>To store information of what is being deployed in release. It will also track pre and post deployment steps.</description>
    <label>Release Component</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Release Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Release Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>