force-app/main/default/objects/SAJ_Release_Component__c/fields/SAJ_API_Version__c.field-meta.xml
<CustomField>
    <fullName>SAJ_API_Version__c</fullName>
    <description>API version of the component</description>
    <encryptionScheme>None</encryptionScheme>
    <label>API Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>