force-app/main/default/objects/SAJ_Release_Component__c/fields/SAJ_Component_Details__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Component_Details__c</fullName>
    <description>Attribute to store the details of the component being deployed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Component Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>