force-app/main/default/objects/SAJ_Release_Component__c/fields/SAJ_Component_Type__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Component_Type__c</fullName>
    <description>Attribute to store the type of the component being deployed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Component Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>