force-app/main/default/objects/SAJ_Release_Component__c/fields/SAJ_Deployment_Sequence__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Deployment_Sequence__c</fullName>
    <description>Attribute to store the sequence number of component during deployment</description>
    <label>Deployment Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>