force-app/main/default/objects/SAJ_Release_Component__c/fields/SAJ_Instructions__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Instructions__c</fullName>
    <description>Attribute to store instructions for Pre and Post release components</description>
    <label>Instructions</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>