force-app/main/default/objects/SAJ_Release_Component__c/fields/SAJ_Reference__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Reference__c</fullName>
    <description>Reference URL of the release component</description>
    <label>Reference</label>
    <type>Url</type>
</CustomField>