force-app/main/default/objects/SAJ_Release_Component__c/fields/SAJ_Release__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Release__c</fullName>
    <description>This field show linking of ALM Release component to ALM Release</description>
    <label>Release</label>
    <referenceTo>SAJ_Release__c</referenceTo>
    <relationshipLabel>Release Components</relationshipLabel>
    <relationshipName>ALM_Release_Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>