force-app/main/default/objects/SAJ_Release_Component__c/fields/SAJ_Status__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Status__c</fullName>
    <description>Status of the Component is determined by the state of the repository.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>