force-app/main/default/objects/SAJ_Release_Component__c/fields/SAJ_Type__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Type__c</fullName>
    <description>Attribute to store the type of the release component being deployed(Allowed values: Metadata,Pre,Post)</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metadata</fullName>
            </value>
            <value>
                <fullName>Pre</fullName>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>