force-app/main/default/objects/SAJ_Release_Component__c/recordTypes/SAJ_Metadata.recordType-meta.xml
<RecordType>
    <fullName>SAJ_Metadata</fullName>
    <active>true</active>
    <description>Metadata Release Components</description>
    <label>Metadata</label>
</RecordType>