force-app/main/default/objects/SAJ_Release_Component__c/recordTypes/SAJ_Others.recordType-meta.xml
<RecordType>
    <fullName>SAJ_Others</fullName>
    <active>true</active>
    <description>Pre &amp; Post Deployment Release Components</description>
    <label>Others</label>
</RecordType>