force-app/main/default/objects/SAJ_Release_Component__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SAJ_Component_Details__c</columns>
    <columns>SAJ_Component_Type__c</columns>
    <columns>SAJ_API_Version__c</columns>
    <columns>SAJ_Release__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>